--- a/files/nginx/tube.conf
+++ b/files/nginx/tube.conf
@@ -11,7 +11,7 @@ upstream tube {
 server {
 
     listen      80;
-    server_name notify.in-planet.net;
+    server_name tube.in-planet.net;
     charset     utf-8;
 
     access_log /home/jcgiler/log/nginx/access.log;
@@ -27,7 +27,7 @@ server {
 
     location / {
         uwsgi_pass tube;
-	uwsgi_read_timeout 500;
+	    uwsgi_read_timeout 500;
         include /etc/nginx/uwsgi_params;
     }
 }
