--- a/files/uwsgi/tube.ini
+++ b/files/uwsgi/tube.ini
@@ -9,6 +9,6 @@ processes = 10
 socket = /tmp/tube.sock
 chmod-socket = 664
 vacuum = true
-uid = www-data
-gid = www-data
+uid = jcgiler
+gid = jcgiler
 daemonize = /home/jcgiler/log/uwsgi/tube.log
