--- a/files/nginx/tube.conf
+++ b/files/nginx/tube.conf
@@ -11,7 +11,7 @@ upstream tube {
 server {
 
     listen      80;
-    server_name tube.in-planet.net;
+    server_name tube.tecnovo.com.ec localhost;
     charset     utf-8;
 
     access_log /home/jcgiler/log/nginx/access.log;
